syntax = "proto3";

package song;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

service SongService {
  rpc ListSongs(ListSongsRequest) returns (ListSongsResponse);

  rpc GetSong(GetSongRequest) returns (Song);

  rpc CreateSong(CreateSongRequest) returns (Song);

  rpc UpdateSong(UpdateSongRequest) returns (Song);

  rpc DeleteSong(DeleteSongRequest) returns (google.protobuf.Empty);
}

message Song {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  string link = 4;
}

message ListSongsRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListSongsResponse {
  // The field name should match the noun "song" in the method name.
  // There will be a maximum number of items returned based on the page_size
  // field in the request.
  repeated Song songs = 1;

  // Token to retrieve the next page of results, or empty if there are no more
  // results in the list.
  string next_page_token = 2;
}

message GetSongRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateSongRequest {
  // The parent resource name where the song is to be created.
  string parent = 1;

  // The song id to use for this song.
  string song_id = 2;

  // The song resource to create.
  // The field name should match the Noun in the method name.
  Song song = 3;
}

message UpdateSongRequest {
  // The song resource which replaces the resource on the server.
  Song song = 1;

  // The update mask applies to the resource.
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteSongRequest {
  // The resource name of the song to be deleted.
  string name = 1;
}
